# KioskTool

./: CMakeLists.txt  COPYING  INSTALL  Messages.sh  kiosktool.desktop
data/: CMakeLists.txt  actions.kiosk  dp.kiosk  general.kiosk  sample.kiosk  themes.kiosk
icons/: hisc-actions-kiosktool_filt_gid.svgz  hisc-actions-kiosktool_filt_uid.svgz  logo-fail.svgz
src/: .directory  CMakeLists.txt  ProfileManager.cpp  ProfileManager.h  ProfileSelectorDialog.cpp  ProfileSelectorDialog.h  ProfileSelectorDialog.ui  component.cpp  component.h  componentPage.cpp  componentPage.h  componentPage.ui  componentSelectionPage.cpp  componentSelectionPage.h  componentSelectionPage.ui  config.h.cmake  desktopComponent.cpp  desktopComponent.h  editorDialog.ui  filetypeeditComponent.cpp  filetypeeditComponent.h  gidfiltermodel.cpp  gidfiltermodel.h  kconfigraweditor.cpp  kconfigraweditor.h  kconfigraweditortest.cpp  kioskConfigDialog.cpp  kioskConfigDialog.h  kioskConfigDialog.ui  kioskdata.cpp  kioskdata.h  kioskgui.cpp  kioskgui.h  kioskrun.cpp  kioskrun.h  kiosksync.cpp  kiosksync.h  kiosktool-kdedirs.cpp  kiosktoolui.rc  main.cpp  (+16 more)
